Update Основные вопросы к калькулятору гентеры.md

--- a/Основные вопросы к калькулятору гентеры.md
+++ b/Основные вопросы к калькулятору гентеры.md
@@ -1,26 +1,49 @@
 **Общие**
 1. Символы, не имеющие соответствующих обозначений в описании (напр. Тиофосфат), не учитываются в длине олига.
 	1. Есть пример последовательности с несуществующими обозначениями?
+		1. `Тиофосфат в настоящее время – единственный не имеет обозначение «буква» / «Гаситель» / «Краситель» / «Модификация» и не учитывается при расчете длины. Например: АСАСАСА*АС имеет длину 9 токенов (букв)`
 2. При изменении цены в прайсе для уже созданного заказа требуется ли пересчет?
+	1. `Если будет изменена цена в прайсе, расчет будет проводиться как для нового заказа.`
 3. Модификации должны располагаться строго в тех позициях, в которых указаны в прайсе.
 	1. Что понимается под позициями и расположением? 
 	2. Есть примеры с модификациями в неправильной позиции?
 
 **Расчет**
 1. Есть ли приоритет в обработке сложных коэффициентов (например, G-богатство, длина ≥36)?
+	1. `Не имеет значения. Сначала лучше считать зонды, затем модификации, затем саму последовательность, чтобы буквенные обозначения не пересекались. Повышающие сложность коэффициенты учитываются при расчете соответствующих вариантов: сколько красителей, сколько внутренних модификаций и пр. Cy5 располагается в прайсе выше Cy5.5 специально, чтобы его учесть первым.`
 2. Учитываются ли строчные и заглавные буквы как идентичные (A и a)?
+	1. `Заглавные и строчные буквы не являются идентичными.`
 3. Можно ли использовать одновременно несколько модификаций на одном конце? Если да, как учитывать их стоимость?
+	1. `На одном конце может быть только одна модификация. Количество внутренних модификаций может быть сколько угодно, их стоимости складываются.`
 4. Допустимо ли размещение модификаций в некорректных позициях внутри последовательности?
 	- Пример: /mod/ACGT/mod/.
 		- Если нет, какие действия предпринимать?
+	- `Внутренние модификации могут располагаться в любом месте последовательности в любом порядке, проверка не требуется.`
 5. Если указана модификация, отсутствующая в прайсе, расчет должен быть остановлен для всей строки или продолжен без учета этой модификации?
+	1. `Расчет останавливается для всей строки.`
 6. Дополнительные модификации в зонде:
 	1. Как учитывать стоимость дополнительных красителей и гасителей сверх основной пары?
+		1. `Прибавляются к стоимости как модификации.`
 	2. Учитываются ли они в повышающих коэффициентах?
+		1. `Учитываются в следующих коэффициентах`
+			1. `Олигонуклеотид содержит в себе два или более красителя (указано в прайсе)`
+			2. `Олигонуклеотид содержит в себе два или более гасителя (указано в прайсе)`
+			3. `Олигонуклеотид содержит в себе три и более внутренних модификаций (краситель, гаситель, «модификация»)`
 7. Что делать с последовательностями, содержащими некорректные символы (например, кириллица, специальные символы)?
 	1. Пропускать такие строки?
 	2. Исключать некорректные символы из расчета?
 	3. Выводить пользователю конкретное сообщение об ошибке?
+	4. `Выводить сообщение о некорректных символах`
 8. Есть ли ограничения на применение нескольких коэффициентов одновременно?
 	1. Например, GentaOligoPure + G-богатство.
 	2. Если несколько коэффициентов применимы (например, длина ≥36 и G-богатство), порядок применения фиксированный или они перемножаются?
+	3. `Они перемножаются, ограничений нет, сколько раз получается повышающий коэффициент, столь ко применяется. Кроме G-повторы и G-богатый – применяется один из этих коэффициентов. То есть, если олиг G-богатый (много G), можно не проверять на G-повторы (где и как в последовательности стоят G). Олигонуклеотид содержит два или более красителя, или гасителя – это один коэффициент.`
+7. В последовательности `АСАСАСА*АС` символ `*` обозначает тиофосфат, верно?
+8. В предоставленном прайсе отсутствуют столбцы `Модификации_5'` и `Модификации_3'`; вместо этого указан столбец `Модификации_3_5`. Не совсем понятно, как правильно распределить модификации. Существует ли алгоритм или правило, которое позволяет определить корректность их расположения?
+9. Поясните пожалуйста по изменениям в файле "Подробный алгоритм расчета стоимости олигонуклеотидов" в 3 примере? В частности:
+	1. Почему модификация `/dt-BHQ1/` была заменена на `+BHQ1`? Что означает `+` в данной модификации?
+	2. Почему из итогового расчета была исключена стоимость праймеров?
+10. Верно ли, что на данный момент доступны следующие гасители: `BHQ1, BHQ2, BHQ3`?
+11. Верно ли, что на данный момент доступны следующие красители: `FAM, VIC, SIMA, R6G, HEX, ROX, TAMRA, JOE, Cy3, Cy5, Cy5.5`?
+12. Следующие модификации, насколько я понимаю, не относятся ни к красителям, ни к гасителям и не участвуют в расчете стоимости зондов: `Bio, Alk, P, NH2, SH, Chol`?
+13. Внешние модификации, указанные в пунктах 4 и 5 (красители и гасители), имеют аналоги в виде внутренних модификаций. Для них используется приставка `dT-` и обрамление символами `/` с обеих сторон (например, `/dt-BHQ1/`), верно?
