Update Основные требования к калькулятору гентерры.md

--- a/Основные требования к калькулятору гентерры.md
+++ b/Основные требования к калькулятору гентерры.md
@@ -6,22 +6,31 @@
     - Данные о клиенте и организации:
         - Берутся из личного кабинета (если пользователь авторизован).
         - Запрашиваются в форме.
-2. **Поля ввода для расчета:**
+
+1. **Поля ввода для расчета:**
 	- Название.
     - Последовательность (5' → 3').
     - Количество (в о.е.), включая «min».
     - 5’ и 3’ модификации.
+    - Галочка **GentaOligoPure** (указывает на повышенные требования к чистоте).
+
+2. **Дополнительные поля при выводе результатов расчета**
     - Сложность.
     - Цена.
-    - Галочка **GentaOligoPure** (указывает на повышенные требования к чистоте).
+
 3. **Дополнительные данные:**
-    - Разрешенные модификации (внешние и внутренние) указаны в инструкции.
+    - Выбор модификации (внешней и внутренней) из выпадающего списка.
     - Проверка введенных данных:
         - Удаление лишних символов (например, пробелов).
         - Ошибочные символы или модификации → сообщение пользователю.
+
 4. **Изменяемость данных:**
-    
-    - Списки модификаций и зондов должны быть настраиваемыми через интерфейс сайта.
+    - Модератор калькулятора может выполнять добавление, изменение и удаление допустимого объема, стоимости, а также списка следующих параметров:
+	    - Праймеры
+	    - Внешние модификации
+	    - Внутренние модификации
+	    - Зонды
+	
 
 #### **Расчет**
 #### 1. **Типы расчетов**
@@ -102,19 +111,22 @@
     - коэффициент = 1.3.
       
 2. **G-богатая последовательность:**
-    - Гуанины (G, +G, oG и т.д.) составляют ≥50% длины
+    - Гуанины (`G, +G, oG, mG, fG, rG`) составляют ≥50% длины
 	    - коэффициент = 1.3.
+	- `Не применяется, если имеются G-повторы`
 	      
-1. **Повторы G в последовательности:**
+3. **Повторы G в последовательности:**
+	- `G` может быть в следующих вариациях:
+		- `G`, `+G`, `oG`, `mG`, `fG`, `rG`
     - Существуют специфические шаблоны повторов G:
-        - `GGG-x-GGG` с x ≤ 6 (3+ раза).
-        - `GGGGGG` (1+ раз).
+        - `GGG-x-GGG` (`x` ≤ 6 токенов), от 2 повторений структуры.
+        - `GGGGGG` (6 и более G подряд), от 1 повторения структуры.
+        - `GGGG-x-GGGG` (`x` ≤ 6 токенов), от 1 повторения структуры.
     - коэффициент = 1.3.
+    - `Не применяется, если последовательность G-богатая`
       
-2. **Дополнительные модификации:**
-    - Два и более красителей:
-	    - коэффициент = 1.3.
-    - Два и более гасителей:
+4. **Дополнительные модификации:**
+    - Два и более красителей или два и более гасителей:
 	    - коэффициент = 1.3.
     - Три и более внутренних модификаций:
 	    - коэффициент = 1.3.
@@ -159,7 +171,7 @@
         - Общая сумма заказа.
           
 2. **Коммерческое предложение (КП):**
-    - Формируется как PDF-файл:
+    - Формируется как XLS-файл:
         - Номенклатура по масштабу синтеза (min, 20 о.е. и т.д.).
         - Учет НДС.
         - Указание повышающих коэффициентов («GentaOligoPure», «custom»).
