Update Подробный алгоритм расчета стоимости олигонуклеотидов.md

--- a/Подробный алгоритм расчета стоимости олигонуклеотидов.md
+++ b/Подробный алгоритм расчета стоимости олигонуклеотидов.md
@@ -5,15 +5,13 @@
 - **Последовательность:** строка, состоящая из букв A, C, G, T (заглавные или строчные).  
     Пример: `ACGTACGT`.
 - **Масштаб синтеза (в о.е.):** минимальный (`min`) или заданный числом (например, `10`, `20`, `40` и т.д.).
-- **Прайс:** стоимость каждой буквы для заданного масштаба.
 
 ##### **Алгоритм:**
 
 1. Проверяем корректность последовательности:
-    - Убедиться, что она состоит только из допустимых символов (A, C, G, T).
-    - Если есть некорректные символы:
-	    - ошибка.
-1. Рассчитываем базовую стоимость:
+    - Убедиться, что она состоит только из допустимых символов ( строчные и прописные буквы латинского алфавита, цифры, а также символы: `. * - /`).
+    - Если есть некорректные символы → ошибка.
+2. Рассчитываем базовую стоимость:
     - **Сумма стоимости всех букв в последовательности.**
     - Каждая буква берется из прайса на основании масштаба синтеза.  
         Пример:
@@ -37,12 +35,12 @@
     - **5’-модификация** (например, `Bio`).
     - **3’-модификация** (например, `FAM`).
 - **Масштаб синтеза (в о.е.):** минимальный или заданный числом.
-- **Прайс:** стоимость букв, внутренних и внешних модификаций.
 
 ##### **Алгоритм:**
 
 1. Проверяем корректность данных:
-    - Убедиться, что все буквы и модификации указаны правильно (есть в прайсе).
+    - Убедиться, что строка состоит только из допустимых символов
+    - Убедиться, что заданны корректные внешние модификации в нужных позициях
     - Если есть некорректные данные → ошибка.
       
 2. Рассчитываем стоимость последовательности:
@@ -77,14 +75,14 @@
 - **Обязательно пара:** краситель + гаситель.
 - **Модификации:**
     - Внешние модификации (5’, 3’) или внутренние модификации.
+    - Всегда есть как минимум одна модификация (краситель или гаситель)
 - **Масштаб синтеза (в о.е.):** минимальный или заданный числом.
-- **Прайс:** стоимость зондов (пары краситель/гаситель) и дополнительных модификаций.
 
 ##### **Алгоритм:**
 
 1. Проверяем корректность данных:
     - Убедиться, что есть корректная пара краситель/гаситель (есть в прайсе).
-    - Если пара отсутствует или некорректна → ошибка.
+    - Если есть 1 или более красителя и 1 и более гасителя, но пара в прайсе отсутствует → ошибка.
       
 2. Рассчитываем стоимость зонда:
     - Для заданной пары краситель/гаситель берем стоимость из прайса.
@@ -92,16 +90,62 @@
         - Пара `FAM` и `BHQ1` стоит 50 у.е. (масштаб до 40 о.е.).
           
 3. Добавляем стоимость дополнительных модификаций (если есть):
-    - Например, если зонд содержит еще один краситель, его стоимость добавляется.
+    - Например, если зонд содержит еще один краситель, его стоимость добавляется как модификация.
       
 4. Применяем масштаб синтеза (>40 о.е., если применимо):
     - Аналогично предыдущим вариантам.
     - **Формула:**  
         `стоимость = кол-во о.е. × стоимость за о.е.`.
-        
-5. Если зонд содержит дополнительные модификации:
-	1. стоимость модификаций добавляется.
 
+
+---
+
+#### **4. Общий алгоритм**
+
+##### **Входные данные:**
+
+- **Последовательность:** строка с токенами букв и внутренних модификаций, например:  
+    `ACGT/dT-Alk/ACGT/dT-BHQ1/`.
+- **Внешние модификации:**
+    - **5’-модификация** (`FAM`).
+    - **3’-модификация** (`JOE`)
+- **Масштаб синтеза (в о.е.):** минимальный или заданный числом.
+
+1. Проверка последовательности:
+    - Проверяем, что строка состоит только из допустимых символов
+    - Проверяем, что заданны корректные внешние модификации в нужных позициях
+    - Если есть некорректные данные → ошибка.
+3. Токенизация последовательности: 
+	1. Токены модификации, которые распределяются по типу:
+		1. Краситель
+		2. Гаситель
+		3. Обычная модификация
+	2. Токены праймеров
+	3. Токены гуанина
+4. Проверка наличия зонда в последовательности
+	1. Если есть как минимум 1 краситель и 1 гаситель
+		1. Проверяем, составляет ли их комбинация в среди возможных составляющих зонд
+		2. Если зон найден, рассчитываем его стоимость
+		3. `Если пара не составляет зонд → ошибка`
+5. Расчет стоимости внутренних и внешних модификаций
+	1. Рассчитываем сумму внутренних модификаций
+	2. Расчет стоимости внешних модификаций
+		1. Если в последовательности есть зонд
+			1. Проверяем, что модификация 3' не входит в зонд
+				1. Добавляем стоимость внешней модификации 3' 
+		2. Если в последовательности нет зондов, добавляем стоимость внешних модификаций
+6. Расчет стоимости буквенной последовательности
+7. Проверка повышающих коэффициентов:
+	1. Проверяем длину олига в соответствии с полученными токенами
+	2. Проверяем содержание гуанина
+	3. Если токенов гуанина больше 6:
+		1. Проверяем наличие последовательностей гуанина
+			1. `Если содержание гуанина более 50%, проверку можно опустить`
+	4. Проверяем количество красителей и гасителей
+	5. Проверяем количество внутренних модификаций
+8. Рассчитываем общую стоимость последовательности с применением полученных повышающих коэффициентов
+	1. `((стоимость внешних модификаций) + (сумма стоимости букв) + (стоимость внутренних модификаций) + (стоимость зонда, если есть)) * (произведение повышающих коэффициентов)`
+9. Формируем файл с результатами расчета стоимости
 ---
 ### Примеры расчета
 
