--- a/Основные вопросы к калькулятору гентеры.md
+++ b/Основные вопросы к калькулятору гентеры.md
@@ -1,7 +1,7 @@
 **Общие**
 1. Символы, не имеющие соответствующих обозначений в описании (напр. Тиофосфат), не учитываются в длине олига.
 	1. Есть пример последовательности с несуществующими обозначениями?
-		1. `Тиофосфат в настоящее время – единственный не имеет обозначение «буква» / «Гаситель» / «Краситель» / «Модификация» и не учитывается при расчете длины. Например: АСАСАСА*АС имеет длину 9 токенов (букв)`
+		1. `Тиофосфат в настоящее время – единственный не имеет обозначение «буква» / «Гаситель» / «Краситель» / «Модификация» и не учитывается при расчете длины. Например: АСАСАСА*АС имеет длину 10 токенов (9 букв)`
 2. При изменении цены в прайсе для уже созданного заказа требуется ли пересчет?
 	1. `Если будет изменена цена в прайсе, расчет будет проводиться как для нового заказа.`
 3. Модификации должны располагаться строго в тех позициях, в которых указаны в прайсе.
@@ -38,12 +38,21 @@
 	1. Например, GentaOligoPure + G-богатство.
 	2. Если несколько коэффициентов применимы (например, длина ≥36 и G-богатство), порядок применения фиксированный или они перемножаются?
 	3. `Они перемножаются, ограничений нет, сколько раз получается повышающий коэффициент, столь ко применяется. Кроме G-повторы и G-богатый – применяется один из этих коэффициентов. То есть, если олиг G-богатый (много G), можно не проверять на G-повторы (где и как в последовательности стоят G). Олигонуклеотид содержит два или более красителя, или гасителя – это один коэффициент.`
-7. В последовательности `АСАСАСА*АС` символ `*` обозначает тиофосфат, верно?
-8. В предоставленном прайсе отсутствуют столбцы `Модификации_5'` и `Модификации_3'`; вместо этого указан столбец `Модификации_3_5`. Не совсем понятно, как правильно распределить модификации. Существует ли алгоритм или правило, которое позволяет определить корректность их расположения?
-9. Поясните пожалуйста по изменениям в файле "Подробный алгоритм расчета стоимости олигонуклеотидов" в 3 примере? В частности:
+9. В последовательности `АСАСАСА*АС` символ `*` обозначает тиофосфат, верно?
+	1. `Да`
+10. В предоставленном прайсе отсутствуют столбцы `Модификации_5'` и `Модификации_3'`; вместо этого указан столбец `Модификации_3_5`. Не совсем понятно, как правильно распределить модификации. Существует ли алгоритм или правило, которое позволяет определить корректность их расположения?
+	1. `Есть новый файл прайса в котором обозначены столбцы 'Модификации_5' и 'Модификации_3'`
+9 Поясните пожалуйста`
+11. Поясните пожалуйста по изменениям в файле "Подробный алгоритм расчета стоимости олигонуклеотидов" в 3 примере? В частности:
 	1. Почему модификация `/dt-BHQ1/` была заменена на `+BHQ1`? Что означает `+` в данной модификации?
+		1. `В примере 3 считается зонд. Зонд формируется только из пары внутренняя модификация + наружная модификация. Если две внутренние модификации, без наружной, то это не зонд, а две внутренние модификации. +BHQ1 означает наружную модификацию BHQ1, в данном случае, на 3’ (правом) конце.`
 	2. Почему из итогового расчета была исключена стоимость праймеров?
-10. Верно ли, что на данный момент доступны следующие гасители: `BHQ1, BHQ2, BHQ3`?
-11. Верно ли, что на данный момент доступны следующие красители: `FAM, VIC, SIMA, R6G, HEX, ROX, TAMRA, JOE, Cy3, Cy5, Cy5.5`?
-12. Следующие модификации, насколько я понимаю, не относятся ни к красителям, ни к гасителям и не участвуют в расчете стоимости зондов: `Bio, Alk, P, NH2, SH, Chol`?
-13. Внешние модификации, указанные в пунктах 4 и 5 (красители и гасители), имеют аналоги в виде внутренних модификаций. Для них используется приставка `dT-` и обрамление символами `/` с обеих сторон (например, `/dt-BHQ1/`), верно?
+		1. `Зонд имеет цену за весь олигонуклеотид, последовательность букв не учитывается. К цене добавляются только возможные модификации.`
+12. Верно ли, что на данный момент доступны следующие гасители: `BHQ1, BHQ2, BHQ3`?
+	1. `Да`
+13. Верно ли, что на данный момент доступны следующие красители: `FAM, VIC, SIMA, R6G, HEX, ROX, TAMRA, JOE, Cy3, Cy5, Cy5.5`?
+	1. `Да`
+14. Следующие модификации, насколько я понимаю, не относятся ни к красителям, ни к гасителям и не участвуют в расчете стоимости зондов: `Bio, Alk, P, NH2, SH, Chol`?
+	1. `Да, т.ж. N3, C3Prdiol`
+15. Внешние модификации, указанные в пунктах 4 и 5 (красители и гасители), имеют аналоги в виде внутренних модификаций. Для них используется приставка `dT-` и обрамление символами `/` с обеих сторон (например, `/dt-BHQ1/`), верно?
+	1. `Да`
