Update Подробный алгоритм расчета стоимости олигонуклеотидов.md

--- a/Подробный алгоритм расчета стоимости олигонуклеотидов.md
+++ b/Подробный алгоритм расчета стоимости олигонуклеотидов.md
@@ -113,7 +113,7 @@
 
 1. Проверка последовательности:
     - Проверяем, что строка состоит только из допустимых символов
-    - Проверяем, что заданны корректные внешние модификации в нужных позициях
+    - Проверяем, что заданы корректные внешние модификации в нужных позициях
     - Если есть некорректные данные → ошибка.
 3. Токенизация последовательности: 
 	1. Токены модификации, которые распределяются по типу:
@@ -123,28 +123,51 @@
 	2. Токены праймеров
 	3. Токены гуанина
 4. Проверка наличия зонда в последовательности
-	1. Если есть как минимум 1 краситель и 1 гаситель
-		1. Проверяем, составляет ли их комбинация в среди возможных составляющих зонд
-		2. Если зон найден, рассчитываем его стоимость
+	1. Если есть как минимум один краситель и один гаситель, а также присутствует хотя бы одна внешняя модификация
+		1. Проверяем, присутствует ли их комбинация среди возможных составляющих зонд
+		2. Если зонд найден, рассчитываем его стоимость
+			1. Если масштаб синтеза <40 (порогового значения) масштаб
+				1. стоимость = стоимость зонда за соответсвующий масштаб
+			2. Если масштаб синтеза >=40 (порогового значения) о.е.
+				1. стоимость = стоимость зонда за о.е * количество o.e
 		3. `Если пара не составляет зонд → ошибка`
 5. Расчет стоимости внутренних и внешних модификаций
 	1. Рассчитываем сумму внутренних модификаций
+		1. Проверяем, что модификация не входит в зонд
+			1. Добавляем стоимость внутренней модификации
 	2. Расчет стоимости внешних модификаций
 		1. Если в последовательности есть зонд
 			1. Проверяем, что модификация 3' не входит в зонд
-				1. Добавляем стоимость внешней модификации 3' 
+				1. Проверяем, что внешняя модификация стоит на разрешенном месте (есть цена в прайсе)
+					1. Добавляем стоимость внешней модификации 3' 
+			2. Проверяем, что модификация 5' не входит в зонд
+				1. Проверяем, что внешняя модификация стоит на разрешенном месте (есть цена в прайсе)
+					1. Добавляем стоимость внешней модификации 5'
 		2. Если в последовательности нет зондов, добавляем стоимость внешних модификаций
 6. Расчет стоимости буквенной последовательности
+	1. Если масштаб синтеза <40 (порогового значения)
+		1. стоимость = сумме токенов букв праймеров
+	2. Если масштаб синтеза >=40 (порогового значения)
+		1. стоимость = стоимость праймера за о.е. * кол-во о.е.
 7. Проверка повышающих коэффициентов:
 	1. Проверяем длину олига в соответствии с полученными токенами
 	2. Проверяем содержание гуанина
-	3. Если токенов гуанина больше 6:
+		1. Если содержание гуанина более 50%
+			1. Применяем повышающий коэффициент
+			2. `Дальнейшую проверку можно опустить`
+	3. Если токенов гуанина 6 или более и они идут подряд
+			1. Применяем повышающий коэффициент
+			2. `Дальнейшую проверку можно опустить`
 		1. Проверяем наличие последовательностей гуанина
-			1. `Если содержание гуанина более 50%, проверку можно опустить`
+			1. Если найдена хотя бы одна из последовательностей
+				1. Применяем повышающий коэфициент
 	4. Проверяем количество красителей и гасителей
 	5. Проверяем количество внутренних модификаций
 8. Рассчитываем общую стоимость последовательности с применением полученных повышающих коэффициентов
-	1. `((стоимость внешних модификаций) + (сумма стоимости букв) + (стоимость внутренних модификаций) + (стоимость зонда, если есть)) * (произведение повышающих коэффициентов)`
+	1. Если есть зонд
+		1. `((стоимость зонда) + (стоимость внутренних модификаций) + (стоимость внутренних модификаций)) * (произведение повышающих коэффициентов)`
+	2. Если зонда нет
+		1. `((стоимость внешних модификаций) + (сумма стоимости букв) + (стоимость внутренних модификаций)) * (произведение повышающих коэффициентов)`
 9. Формируем файл с результатами расчета стоимости
 ---
 ### Примеры расчета
@@ -152,7 +175,7 @@
 #### **Пример 1: Простой олигонуклеотид**
 
 - Последовательность: `ACGTACGT`.
-- Масштаб синтеза: 5 о.е.
+- Масштаб синтеза: `5 о.е.`
 - Прайс: `A = 39`, `C = 39`, `G = 39`, `T = 39.
 - **Итог:**  
     `39 + 39 + 39 + 39 + 39 + 39 + 39 + 39 = 312 у.е.`.
@@ -162,7 +185,7 @@
 #### **Пример 2: Олигонуклеотид с модификациями**
 
 - Последовательность: `ACGT/dT-Alk/ACGT`.
-- Масштаб синтеза: 5 о.е.
+- Масштаб синтеза: `5 о.е.`
 - Прайс:
     - Внутренняя модификация `/dT-Alk/ = 975,00 у.е.`.
     - 5’-модификация: `Bio = 1 687,50 у.е.`.
@@ -172,12 +195,23 @@
 
 ---
 
-#### **Пример 3: Зонд**
+#### **Пример 3: Зонд, большой масштаб синтеза**
 
-- Последовательность: `ACGT/dT-FAM/ACGT/dT-BHQ1/`.
-- Масштаб синтеза: 50 о.е.
+- Последовательность: `ACGT/dT-FAM/ACGT`.
+- Масштаб синтеза: `50 о.е.`
+- Модификация 3': `BHQ1`
 - Прайс:
-    - Пара `FAM` + `BHQ1`: `7 425,00 у.е`.
-    - Стоимость за 1 о.е.: 1 у.е.
+    - Пара `dt-FAM` + `BHQ1`: `7 425,00 у.е`.
+    - Стоимость зонда за 1 о.е: `1 072,62 у.е.`
 - **Итог:**  
-    `7 425,00 + 50 × 103,55 = 12602,5 у.е.`.
+    `1 072,62 * 50 = 53 631 у.е.`.
+
+#### **Пример 4: Зонд, средний масштаб синтеза**
+
+- Последовательность: `ACGT/dT-FAM/ACGT`.
+- Масштаб синтеза: `min o.e.`
+- Модификация 3': `BHQ1`
+- Прайс:
+    - Пара `dt-FAM` + `BHQ1` за min o.e.: `7 425,00 у.е`.
+- **Итог:**  
+    `7 425,00 у.е.`.
