Update Подробный алгоритм расчета стоимости олигонуклеотидов.md

--- a/Подробный алгоритм расчета стоимости олигонуклеотидов.md
+++ b/Подробный алгоритм расчета стоимости олигонуклеотидов.md
@@ -176,7 +176,7 @@
 
 - Последовательность: `ACGTACGT`.
 - Масштаб синтеза: `5 о.е.`
-- Прайс: `A = 39`, `C = 39`, `G = 39`, `T = 39.
+- Прайс: `A = 39`, `C = 39`, `G = 39`, `T = 39`.
 - **Итог:**  
     `39 + 39 + 39 + 39 + 39 + 39 + 39 + 39 = 312 у.е.`.
 
@@ -201,8 +201,7 @@
 - Масштаб синтеза: `50 о.е.`
 - Модификация 3': `BHQ1`
 - Прайс:
-    - Пара `dt-FAM` + `BHQ1`: `7 425,00 у.е`.
-    - Стоимость зонда за 1 о.е: `1 072,62 у.е.`
+    - Пара `dt-FAM` + `BHQ1`: `1 072,62 у.е.`
 - **Итог:**  
     `1 072,62 * 50 = 53 631 у.е.`.
 
