Update Подробный алгоритм расчета стоимости олигонуклеотидов.md

--- a/Подробный алгоритм расчета стоимости олигонуклеотидов.md
+++ b/Подробный алгоритм расчета стоимости олигонуклеотидов.md
@@ -201,7 +201,7 @@
 - Масштаб синтеза: `50 о.е.`
 - Модификация 3': `BHQ1`
 - Прайс:
-    - Пара `dt-FAM` + `BHQ1`: `1 072,62 у.е.`
+    - Пара `dt-FAM` + `BHQ1` за 1 о.е.: `1 072,62 у.е.`
 - **Итог:**  
     `1 072,62 * 50 = 53 631 у.е.`.
 
